# VFS

./: CMakeLists.txt
.claude/: settings.local.json
kernel/: access.cpp  close.cpp  creat.cpp  delete.cpp  dir.cpp  igetput.cpp  install.cpp  name.cpp  open.cpp  rdwt.cpp
test/: test_inode_dir.cpp
